# coo-icp

./: .gitignore  Cargo.toml  Makefile  README.md  canister_ids.json  dfx.json
docs/: BUILD_YOUR_OWN_AGENT.md
src/eliza_backend/: Cargo.toml  eliza_backend.did
src/eliza_backend/src/: lib.rs
src/eliza_frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/eliza_frontend/src/: App.tsx  index.css  vite-env.d.ts
src/eliza_frontend/src/declarations/eliza_backend/: eliza_backend.did.d.ts  index.ts
