[package]
name = "eliza_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# IC CDK
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
candid = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP Outcalls用
ic-cdk-timers = "0.10"

# IC LLM Canister
ic-llm = "1.1"

[features]
default = []
