[package]
name = "eliza_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# IC CDK
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
candid = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP Outcalls用
ic-cdk-timers = "0.10"

# IC LLM Canister
ic-llm = "1.1"

# OAuth 1.0a / Crypto
sha2 = "0.10"
hmac = "0.12"
sha-1 = "0.10"
base64 = "0.22"
hex = "0.4"

# EVM / Chain-Key ECDSA
tiny-keccak = { version = "2.0", features = ["keccak"] }
rlp = "0.5"
num-bigint = "0.4"

# Solana Wallet
ed25519-dalek = { version = "2.1", default-features = false, features = ["rand_core"] }
bs58 = "0.5"
rand = { version = "0.8", default-features = false }
getrandom = { version = "0.2", features = ["custom"] }

[features]
default = []
